Fix wrapped text on submenus

--- a/wp-content/themes/illdy-child/style.css
+++ b/wp-content/themes/illdy-child/style.css
@@ -91,6 +91,7 @@ Updated: 2017-07-13 19:44:05
 }
 #header .top-header .page_item_has_children .children .page_item a {
 	color: white;
+	white-space: nowrap;
 }
 #header .top-header .page_item_has_children .children .page_item a:hover {
 	color: #F1D204;
